PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-

* Changes since Version 0.4.1:
** Modifications, Fixes and Improvements:
- Add support for isearch-mb global minor mode, activated by *pel-use-isearch-mb* user-option that can be set to t or use-from-start
  which activates it manually or automatically from start.  The ~<f11> s i~ key sequnce is bound to *isearch-mb-mode* that can be used
  to toggle the mode.  The ~<f11> s ?~ now display whether this is used.
- For Emacs 27 and later, PEL now automatically activates *isearch-lazy-count* when *pel-use-anzu* is nil
  to show match count during iSearch operations.
- For Emacs 28 and later, PEL now automatically activates *isearch-allow-motion* which provides
  easy-to use/intuitive motion keys during isearch.
- Fixed a long standing bug that prevented several commands to properly display the mode status.
  The bug was located in pel--base.el.  Apologies for those who were affected when this bug
  caused confusion.
- For Emacs 30.1 or later:
  -  the ~<f11> , p~ key sequence is bound to *completion-preview-mode*.
  -  the ~<f11> , P~ key sequence (upper-case P) is bound to *global-completion-preview-mode*.
  When the mode is active the ~M-n~ and ~M-p~ keys are active to select next and previous completion candidate.
- Add an early version of the [[https://raw.githubusercontent.com/pierre-rouleau/pel/master/doc/pdf/pel-tcl.pdf][𝕻𝔩 - Tcl]] PDF.
- Add preliminary support for Lua when *pel-use-lua* is set. Add an early version of the [[https://raw.githubusercontent.com/pierre-rouleau/pel/master/doc/pdf/pel-lua.pdf][𝕻𝔩 - Lua]] PDF.
- The ~<f12><f12>~ key prefix holding keybindings related to tempo skeleton insertion and management is now available for the
  *sh-mode*, D, Lua, Nim, Perl, Pike, Python and Ruby, Tcl and Tcl expect buffers.
  - While doing that I also improved the *pel-tempo-install-pel-skel* function, allowing the creation of a command bound