@@ -337,7 +337,8 @@ Argument FOR: just a required separator keyword to make code look better."
     pel-emacs-mem-stats
     pel-emacs-command-stats
     pel-emacs-buffer-stats
-    pel-emacs-config-features)
+    pel-emacs-config-features
+    pel-emacs-bug-info)
 
   (pel-autoload "pel-erlang" for:
     pel-erlang-comma
