@@ -2,6 +2,9 @@ PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-
 
 * Changes since Version 0.4.1:
 ** Modifications, Fixes and Improvements:
+- Add command to open the Emacs mailing list info about a specific Emacs bug: *pel-emacs-bug-info* bound to ~<f11> ? e B~.
+  Not yet documented, I want to add more control inside it to allow opening it as a gnus buffer, an internal or external browser,
+  but that's not done yet.
 - Add support for isearch-mb global minor mode, activated by *pel-use-isearch-mb* user-option that can be set to t or use-from-start
   which activates it manually or automatically from start.  The ~<f11> s i~ key sequnce is bound to *isearch-mb-mode* that can be used
   to toggle the mode.  The ~<f11> s ?~ now display whether this is used.
